# yunyin_chat

./: .gitignore  CMakeLists.txt  README.md  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Network/: HttpMgr.cpp
Widgets/Login/: logindialog.h  logindialog.ui
Widgets/Register/: registerdialog.cpp  registerdialog.h  registerdialog.ui
Widgets/Style/: style_helper.h
back-end/GateServer/: AsioIOServicePool.cpp  AsioIOServicePool.h  CServer.cpp  CServer.h  ConfigMgr.cpp  ConfigMgr.h  GateServer.cpp  GateServer.vcxproj  GateServer.vcxproj.filters  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h  PropertySheetVcpkg.props  RedisMgr.cpp  RedisMgr.h  Singleton.h  Test.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h  config.ini  const.h  message.pb.cc  message.pb.h
back-end/VarifyServer/: config.json  email.js  package-lock.json  package.json  redis.js  server.js
docs/: Doxyfile
front-end/: .gitignore  CMakeLists.txt  global.cpp  global.h  main.cpp  mainwindow.cpp
front-end/Network/: HttpMgr.h
front-end/Singleton/: Singleton.h
front-end/Widgets/Login/: logindialog.cpp
front-end/Widgets/Register/: registerdialog.cpp  registerdialog.h  registerdialog.ui
front-end/res/: stylesheet.qss
res/: res.qrc  stylesheet.qss
